# comodoro

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  comodoro.opam  config.sample.toml  default.nix  deny.toml  dune-project  flake.nix  install.sh  package.nix  rust-toolchain.nix  rust-toolchain.toml  shell.nix
.github/ISSUE_TEMPLATE/: do-not-open-issues-on-github.md
.github/workflows/: ci.yaml  deployment.yml  pre-release.yml  pre-releases.yml  release-on-demand.yml  release.yml  releases.yml  tests.yml
examples/: config.toml
lib/: config.ml  config.mli  dune  path.ml  path.mli  process.ml  process.mli  socket.ml  socket.mli  timer.ml  timer.mli  utils.ml
src/: account.rs  cli.rs  config.rs  hooks.rs  lib.rs  main.rs  protocol.rs  stream.rs  tcp.rs  timer.rs  unix-socket.rs
src/account/: account.rs  args.rs  config.rs  mod.rs
src/account/arg/: mod.rs  name.rs
src/client/: args.rs  get.rs  handlers.rs  mod.rs  pause.rs  resume.rs  start.rs  stop.rs
src/client/command/: get.rs  mod.rs  pause.rs  resume.rs  start.rs  stop.rs
src/completion/: command.rs
src/config/: config.rs  durations.rs  hooks.rs  mod.rs  tcp.rs
src/manual/: command.rs
src/preset/: args.rs  config.rs  mod.rs
src/preset/arg/: mod.rs  name.rs
src/protocol/: mod.rs  protocol.rs
src/protocol/arg/: many.rs  mod.rs  one.rs
src/server/: args.rs  handlers.rs  mod.rs  start.rs
src/server/command/: mod.rs  start.rs
src/tcp/: config.rs  mod.rs
src/unix-socket/: config.rs  mod.rs
