[package]
name = "comodoro"
description = "CLI to manage timers"
version = "1.0.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["command-line-utilities", "network-programming"]
keywords = ["cli", "pomodoro", "timer", "client", "server"]
homepage = "https://pimalaya.org/"
documentation = "https://pimalaya.org/comodoro/cli/latest/"
repository = "https://github.com/soywod/comodoro/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["client", "server", "tcp", "command", "notify"]
client = ["time-lib/client"]
server = ["time-lib/server"]
tcp = ["tcp-client", "tcp-binder"]
tcp-client = ["client", "time-lib/tcp-client"]
tcp-binder = ["server", "time-lib/tcp-binder"]

command = ["dep:process-lib"]
notify = ["dep:notify-rust"]

[build-dependencies]
pimalaya-tui = { version = "=0.1", default-features = false, features = ["build-envs"] }

[dev-dependencies]
comodoro = { path = "." }

[dependencies]
async-trait = "0.1"
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
clap_mangen = "0.2"
color-eyre = "0.6"
convert_case = "0.6"
notify-rust = { version = "4", optional = true }
pimalaya-tui = { version = "=0.1", default-features = false, features = ["path", "cli", "config", "tracing"] }
process-lib = { version = "1", default-features = false, features = ["tokio", "derive"], optional = true }
serde = "1"
shellexpand-utils = "=0.2.1"
time-lib = { version = "1", default-features = false, features = ["tokio", "derive"] }
tokio = { version = "1.33", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[patch.crates-io]
process-lib = { git = "https://github.com/pimalaya/core" }
time-lib = { git = "https://github.com/pimalaya/core" }
pimalaya-tui = { git = "https://github.com/pimalaya/tui" }
