[package]
name = "comodoro"
description = "CLI to manage timers"
version = "1.0.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "AGPL-3.0-or-later"
categories = ["command-line-utilities", "network-programming"]
keywords = ["cli", "pomodoro", "timer", "client", "server"]
homepage = "https://pimalaya.org"
documentation = "https://github.com/pimalaya/comodoro"
repository = "https://github.com/pimalaya/comodoro"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[target.aarch64-unknown-linux-musl]
rustflags = ["-C", "link-arg=-latomic"]

[features]
default = ["client", "server", "command", "notify"]
client = ["io-timer/client"]
server = ["io-timer/server"]
command = ["dep:io-process"]
notify = ["dep:notify-rust"]
vendored = ["notify-rust?/d_vendored"]

[build-dependencies]
pimalaya-toolbox = { version = "0.0.2", default-features = false, features = ["build"] }

[dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
clap_mangen = "0.2"
convert_case = "0.11"
env_logger = "0.11"
io-process = { version = "0.0.2", default-features = false, features = ["std", "serde"], optional = true }
io-stream = { version = "0.0.2", default-features = false, features = ["std"] }
io-timer = "0.0.1"
log = "0.4"
notify-rust = { version = "4", default-features = false, features = ["d"], optional = true }
pimalaya-toolbox = { version = "0.0.2", default-features = false, features = ["config", "prompt", "secret", "stream", "terminal"] }
serde = "1"

[patch.crates-io]
io-process.git = "https://github.com/pimalaya/io-process"
io-stream.git = "https://github.com/pimalaya/io-stream"
io-timer.git = "https://github.com/pimalaya/io-timer"
pimalaya-toolbox.git = "https://github.com/pimalaya/toolbox"
